<resources>
    <string name="app_name">chatapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="need_new_account">Need New Account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="email">Email</string>
    <string name="or_login_using_your">or Login using your?</string>
    <string name="Phone">Phone</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="Email">Email</string>
    <string name="Password">password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="hey_i_am_available">hey,i am available</string>
    <string name="update">Update</string>
    <string name="Update" />
    <string name="chats_fragment">Chats Fragment</string>
</resources>