<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/login_photo"
                android:contentDescription="@string/todo" />
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:autofillHints="" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:autofillHints=""
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_password"
                android:text="@string/forget_password"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#01579B"
                />


            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                android:drawableStart="@drawable/buttons"
                />

            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_button"
                android:text="@string/need_new_account"
                android:layout_marginTop="2dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="#01579B"
                />
            <TextView
                android:id="@+id/login_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/need_new_account_link"
                android:text="@string/or_login_using_your"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_using"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:background="@drawable/buttons"
                android:padding="4dp"
                android:text="@string/Phone"
                android:textAllCaps="false"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>